--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -31,6 +31,27 @@
 }
 
 .hotel-view {
-    height: 80rem;
     flex: 1;
+}
+
+.details {
+    display: flex;
+    padding: 4.5rem;
+    background-color: var(--color-grey-light-2);
+    border-bottom: var(--line);
+}
+
+.description {
+    font-size: 1.4rem;
+    background-color: #fff;
+    box-shadow: var(--shadow-light);
+    padding: 3rem;
+    flex: 0 0 60%;
+    margin-right: 4.5rem;
+
+}
+
+.user-reviews {
+    background-color: yellowgreen;
+    flex: 1;   
 }
