--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -247,9 +247,17 @@
     background-color: transparent;
     cursor: pointer;
     transition: all .2s;
+    & span {
+        margin-left: 3px;
+        transition: margin-left .2s;
+    }
     &:hover {
         color: var(--color-grey-dark-1);
+        span {
+            margin-left: 8px;
+        }
     }
+
     &:focus {
         outline: none;
         animation: pulsate 1s infinite;
@@ -332,5 +340,123 @@
         &:not(:last-child) {
             margin-right: -1.5rem;
         }
+    }
+}
+
+/////////////////////////////////////////
+//REVIEWS
+
+.review {
+    position: relative;
+    background-color: #fff;
+    box-shadow: var(--shadow-light);
+    padding: 3rem;
+    margin-bottom: 3.5rem;
+    overflow: hidden;
+    &__text {
+        margin-bottom: 2rem;
+        z-index: 10;
+        position: relative;
+    }
+    &__user {
+        display: flex;
+        align-items: center;
+
+    }
+    &__photo {
+        height: 4.5rem;
+        width: 4.5rem;
+        border-radius: 50%;
+        margin-right: 1rem;
+    }
+    &__user-box {
+        margin-right: auto;
+
+    }
+    &__user-name {
+        font-size: 1.1rem;
+        font-weight: 600;
+        text-transform: uppercase;
+        margin-bottom: .4rem;
+
+
+    }
+    &__user-date {
+        font-size: 1rem;
+        color: var(--color-grey-dark-3);
+
+    }
+    &__rating {
+        color: var(--color-primary);
+        font-size: 2.2rem;
+        font-weight: 300;
+    }
+    &::before {
+        content: '\201C';
+        position: absolute;
+        top: -2.75rem;
+        left: -1rem;
+        font-size: 20rem;
+        color: var(--color-grey-light-2);
+        font-family: sans-serif;
+        line-height: 1;
+        z-index: 1;
+    }
+}
+//////////////////////////////////////////
+//CALL TO ACTION
+
+.cta {
+    padding: 3.5rem 0;
+    text-align: center;
+    &__book-now {
+        text-transform: uppercase;
+        font-size: 2rem;
+        font-weight: 300;
+        margin-bottom: 2.5rem;
+    }
+}
+
+.btn {
+    font-size: 1.5rem;
+    border: none;
+    font-weight: 300;
+    text-transform: uppercase;
+    border-radius: 100px;
+    background-image: linear-gradient(to right, var(--color-primary-light), var(--color-primary-dark));
+    color: #fff;
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+    & > * {
+        display: inline-block;
+        height: 100%;
+        width: 100%;
+        transition: all .2s;      
+    }
+    &__visible {
+        padding: 2rem 7.5rem;
+    }
+    &__invisible {
+        position: absolute;
+        left: 0;
+        top: -100%;
+        padding: 2rem;
+    }
+
+    &:hover {
+        background-image: linear-gradient(to left, var(--color-primary-light), var(--color-primary-dark));
+    }
+    &:hover &__visible {
+        transform: translateY(100%);
+
+    }
+    &:hover &__invisible {
+        top: 0;
+    }
+    &:focus {
+        outline: none;
+        animation: pulsate 1s infinite;
+
     }
 }
