--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -35,6 +35,7 @@
 }
 
 .details {
+    font-size: 1.4rem;
     display: flex;
     padding: 4.5rem;
     background-color: var(--color-grey-light-2);
@@ -52,6 +53,8 @@
 }
 
 .user-reviews {
-    background-color: yellowgreen;
-    flex: 1;   
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;   
 }
