Add large and medium devices styles

--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -110,11 +110,21 @@
     font-size: 1.4rem;
     list-style: none;
     margin-top: 3.5rem;
+    @media only screen and (max-width: $bp-medium) {
+       display: flex;
+       margin-top: 0;    
+    }
     &__item {
       position: relative;
       &:not(:last-child) {
           margin-bottom: .5rem;
+          @media only screen and (max-width: $bp-medium) {
+            margin-bottom: 0;    
+         }
       }
+      @media only screen and (max-width: $bp-medium) {
+        flex: 1;    
+     }
     }
     &__item::before {
         content: "";
@@ -148,14 +158,16 @@
         align-items: center;
         position: relative;
         z-index: 10;
-
+        @media only screen and (max-width: $bp-medium) {
+            justify-content: center; 
+            padding: 2rem;   
+         }
     }
     &__icon {
         width: 1.75rem;
         height: 1.75rem;
         margin-right: 2rem;
         fill: currentColor;
-
     }
 }
 
@@ -166,8 +178,10 @@
     font-size: 1.2rem;
     text-align: center;
     padding: 2.5rem;
-    color: var(--color-grey-light-4)
-
+    color: var(--color-grey-light-4);
+    @media only screen and (max-width: $bp-medium) {
+        display: none;
+    }
 }
 /////////////////////////////////////////////////
 //GALLERY
@@ -329,7 +343,7 @@
         margin-right: auto;
     }
     &__friends {
-
+        display: flex;
     }
     &__photo {
         box-sizing: content-box;
@@ -338,7 +352,7 @@
         border-radius: 50%;
         border: 3px solid #fff;
         &:not(:last-child) {
-            margin-right: -1.5rem;
+            margin-right: 2rem;
         }
     }
 }
@@ -353,6 +367,10 @@
     padding: 3rem;
     margin-bottom: 3.5rem;
     overflow: hidden;
+    @media only screen and (max-width: $bp-medium) {
+        padding: 2rem;
+        margin-bottom: 3rem;    
+     }
     &__text {
         margin-bottom: 2rem;
         z-index: 10;
@@ -409,6 +427,9 @@
 .cta {
     padding: 3.5rem 0;
     text-align: center;
+    @media only screen and (max-width: $bp-medium) {
+        padding: 2.5rem 0;
+    }
     &__book-now {
         text-transform: uppercase;
         font-size: 2rem;
