--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -18,6 +18,10 @@
     --line: 1px solid var(--color-grey-light-2);
 }
 
+$bp-largest: 75em; //1200/16
+$bp-large: 68.75em; //1100/16
+$bp-medium: 56.25em ;//901/16
+
 * {
     margin: 0;
     padding: 0;
@@ -31,6 +35,9 @@
 html {
     box-sizing: border-box;
     font-size: 62.5%; //1 rem = 10px 10px/16px = 62.5%;
+    @media only screen and (max-width: $bp-large) {
+        font-size: 50%;
+    }
 }
 
 body {
