--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -20,8 +20,9 @@
 
 $bp-largest: 75em; //1200/16
 $bp-large: 68.75em; //1100/16
-$bp-medium: 56.25em ;//901/16
-
+$bp-medium: 56.25em; //901/16
+$bp-small: 37.5em; //601/16
+$bp-smallest: 31.25em; // 500/16
 * {
     margin: 0;
     padding: 0;
