--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -13,6 +13,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    @media only screen and (max-width: $bp-smallest) {
+        order: 1;
+        flex: 0 0 100%;
+        background-color: var(--color-grey-light-2);
+    }
     &__input {
         font-family: inherit;
         font-size: inherit;
@@ -161,6 +166,10 @@
         @media only screen and (max-width: $bp-medium) {
             justify-content: center; 
             padding: 2rem;   
+        }
+        @media only screen and (max-width: $bp-small) {
+            flex-direction: column;
+             padding: 1.5rem .5rem;
          }
     }
     &__icon {
@@ -168,6 +177,12 @@
         height: 1.75rem;
         margin-right: 2rem;
         fill: currentColor;
+        @media only screen and (max-width: $bp-small) {
+            margin-right: 0;
+            margin-bottom: .7rem;
+            width: 1.5rem;
+            height: 1.5rem;
+         }
     }
 }
 
@@ -207,6 +222,10 @@
         text-transform: uppercase;
         letter-spacing: 1px;
         padding:  1.5rem 3rem;
+        @media only screen and (max-width: $bp-small) {
+            font-size: 1.8rem;
+            padding: 1.25rem 2rem;
+         }
     }
     &__stars {
         margin-right: auto;
@@ -237,15 +256,25 @@
        flex-direction: column;
        align-items: center;
        justify-content: center;
+       @media only screen and (max-width: $bp-small) {
+           padding: 0 1.5rem;
+      
+     }
     }
     &__rating-average {
         font-size: 2.25rem;
         font-weight: 300;
         margin-bottom: -3px;
+        @media only screen and (max-width: $bp-small) {
+            font-size: 1.8rem;
+         }
     }
     &__rating-count {
         font-size: .8rem;
         text-transform: uppercase;
+        @media only screen and (max-width: $bp-small) {
+            font-size: .5rem;
+         }
 
     }
 }
