--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -19,6 +19,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    @media only screen and (max-width: $bp-smallest) {
+        flex-wrap: wrap;
+        height: 11rem;
+        align-content: space-around;
+    }
 
 }
 
@@ -50,6 +55,9 @@
     @media only screen and (max-width: $bp-medium) {
         padding: 3rem;    
      }
+    @media only screen and (max-width: $bp-small) {
+        flex-direction: column;    
+     }
 }
 
 .description {
@@ -62,7 +70,11 @@
     @media only screen and (max-width: $bp-medium) {
         padding: 2rem;
         margin-right: 3rem;    
-     }
+    }
+    @media only screen and (max-width: $bp-small) {
+        margin-right: 0;
+        margin-bottom: 3rem;    
+    }
 
 }
 
