--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -351,12 +351,16 @@
       height: 1rem;
       margin-right: .7rem;
       //Older browsers
-      //background-image:url(../img/chevron-thin-right.svg);
+      background-image:url(../img/chevron-thin-right.svg);
       background-size: cover;
       //Newer browsers-masks
-      background-color: var(--color-primary);
-      -webkit-mask-image: url(../img/chevron-thin-right.svg);
-      -webkit-mask-size: cover;
+    @supports (-webkit-mask-image: url() or (mask-image: url())) {
+        background-color: var(--color-primary);
+        -webkit-mask-image: url(../img/chevron-thin-right.svg);
+        -webkit-mask-size: cover;
+        background-image: none;
+    }
+      
   }
 }
 
